--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/individual_subscription.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/individual_subscription.xml
@@ -215,6 +215,7 @@
             android:layout_marginBottom="4dp"
             android:orientation="horizontal">
             <ImageButton
+                android:id="@+id/individual_subscription_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -226,6 +227,7 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/user"></ImageButton>
             <ImageButton
+                android:id="@+id/group_subscription_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -238,6 +240,7 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/group"></ImageButton>
             <ImageButton
+                android:id="@+id/add_subscription_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -250,6 +253,7 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/add"></ImageButton>
             <ImageButton
+                android:id="@+id/community_board_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -262,6 +266,7 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/community"></ImageButton>
             <ImageButton
+                android:id="@+id/settings_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
