--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/subscriptions.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/subscriptions.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Search"
-                android:textSize="15sp"
+                android:textSize="30sp"
                 android:backgroundTint="@color/black"
                 android:textCursorDrawable="@null"
                 android:textColor="@color/black">
@@ -860,27 +860,26 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
         android:layout_marginEnd="17dp"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="4dp"
         android:orientation="horizontal">
-
         <ImageButton
+            android:id="@+id/individual_subscription_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/buttonbordersel"
+            android:background="@drawable/buttonborder"
             android:paddingStart="5dp"
             android:paddingTop="5dp"
             android:paddingRight="5dp"
             android:paddingBottom="5dp"
             android:scaleType="fitCenter"
             android:src="@drawable/user"></ImageButton>
-
         <ImageButton
+            android:id="@+id/group_subscription_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -892,21 +891,21 @@
             android:paddingBottom="5dp"
             android:scaleType="fitCenter"
             android:src="@drawable/group"></ImageButton>
-
         <ImageButton
+            android:id="@+id/add_subscription_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_weight="1"
-            android:background="@drawable/buttonborder"
+            android:background="@drawable/buttonbordersel"
             android:paddingStart="5dp"
             android:paddingTop="5dp"
             android:paddingRight="5dp"
             android:paddingBottom="5dp"
             android:scaleType="fitCenter"
             android:src="@drawable/add"></ImageButton>
-
         <ImageButton
+            android:id="@+id/community_board_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -918,8 +917,8 @@
             android:paddingBottom="5dp"
             android:scaleType="fitCenter"
             android:src="@drawable/community"></ImageButton>
-
         <ImageButton
+            android:id="@+id/settings_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -931,7 +930,5 @@
             android:paddingBottom="5dp"
             android:scaleType="fitCenter"
             android:src="@drawable/settings"></ImageButton>
-
-
     </LinearLayout>
 </LinearLayout>
