--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/activity_add_member.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/activity_add_member.xml
@@ -93,7 +93,7 @@
                 android:paddingRight="5dp"
                 android:paddingBottom="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/user"></ImageButton>
+                android:src="@drawable/user"/>
             <ImageButton
                 android:id="@+id/group_subscription_button"
                 android:layout_width="0dp"
@@ -106,7 +106,7 @@
                 android:paddingRight="5dp"
                 android:paddingBottom="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/group"></ImageButton>
+                android:src="@drawable/group"/>
             <ImageButton
                 android:id="@+id/add_subscription_button"
                 android:layout_width="0dp"
@@ -119,7 +119,7 @@
                 android:paddingRight="5dp"
                 android:paddingBottom="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/add"></ImageButton>
+                android:src="@drawable/add"/>
             <ImageButton
                 android:id="@+id/community_board_button"
                 android:layout_width="0dp"
@@ -132,7 +132,7 @@
                 android:paddingRight="5dp"
                 android:paddingBottom="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/community"></ImageButton>
+                android:src="@drawable/community"/>
             <ImageButton
                 android:id="@+id/settings_button"
                 android:layout_width="0dp"
@@ -145,8 +145,10 @@
                 android:paddingRight="5dp"
                 android:paddingBottom="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/settings"></ImageButton>
+                android:src="@drawable/settings"/>
         </LinearLayout>
+
     </LinearLayout>
+
 
 </LinearLayout>
