--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/individual_dm.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/individual_dm.xml
@@ -28,7 +28,7 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/profile"
+                    android:id="@+id/back_arrow"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="10dp"
@@ -37,7 +37,7 @@
                     android:scaleType="fitCenter"
                     android:src="@drawable/back"></ImageButton>
 
-                <com.google.android.material.button.MaterialButton
+                <Button
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="10dp"
@@ -47,7 +47,7 @@
                     android:text="Search"
                     android:textColor="#616161">
 
-                </com.google.android.material.button.MaterialButton>
+                </Button>
 
                 <ImageButton
                     android:id="@+id/compose"
@@ -472,82 +472,6 @@
             android:layout_marginTop="6dp"
             android:layout_marginBottom="10dp"
             android:background="#000000" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="17dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="17dp"
-            android:layout_marginBottom="4dp"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/buttonborder"
-                android:paddingStart="5dp"
-                android:paddingTop="5dp"
-                android:paddingRight="5dp"
-                android:paddingBottom="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/user"></ImageButton>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/buttonborder"
-                android:paddingStart="5dp"
-                android:paddingTop="5dp"
-                android:paddingRight="5dp"
-                android:paddingBottom="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/group"></ImageButton>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/buttonborder"
-                android:paddingStart="5dp"
-                android:paddingTop="5dp"
-                android:paddingRight="5dp"
-                android:paddingBottom="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/add"></ImageButton>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/buttonbordersel"
-                android:paddingStart="5dp"
-                android:paddingTop="5dp"
-                android:paddingRight="5dp"
-                android:paddingBottom="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/community"></ImageButton>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/buttonborder"
-                android:paddingStart="5dp"
-                android:paddingTop="5dp"
-                android:paddingRight="5dp"
-                android:paddingBottom="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/settings"></ImageButton>
-
-
-        </LinearLayout>
     </LinearLayout>
 
 
